# ipl3checksum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: c_bindings.yml  maturin_upload_pypi.yml  md_lint.yml  mypy.yml  publish_crate.yml  test_other_repo_c.yml.yml  test_other_repo_python.yml  tests.yml  tests_other_repo.yml  upload_pypi.yml
bindings/c/: Makefile
bindings/c/include/: ipl3checksum.h
bindings/c/include/ipl3checksum/: checksum.h  cickinds.h  detect.h  error.h  utils.h  version.h
bindings/c/tests/: test_checksum.c  test_checksum_autodetect.c  test_checksum_autodetect_other_repo.sh  test_checksum_dummies.sh  test_detect.c  test_detect_other_repo.sh  utils.c  utils.h
bindings/python/tests/: test_check_other_repo.sh
docs/: reference_implementation.md
notes/: README.md  check_5101.py  check_6102.py  check_6103.py  check_6105.py  check_6106.py  checksum.c  decrypt_6106.py
src/ipl3checksum/: __init__.py  __main__.py  check_6102.py  check_6103.py  check_6105.py  check_6106.py  checksum.py  checksum.pyi  cickinds.py  cickinds.pyi  decript_6106.py  detect.py  detect.pyi  ipl3checksum.pyi  ipl3kinds.py  utils.py
src/ipl3checksum/exceptions/: exceptions.pyi
src/ipl3checksum/frontends/: __init__.py  check.py  climain.py  detect_cic.py  sum.py
src/rs/: checksum.rs  cickinds.rs  detect.rs  error.rs  lib.rs  utils.rs  version.rs
tests/: calculate_checksum.py  check_correct_sum.py  check_recursive.py  exception_test.py  gen_dummy_bin.py
