# SPDX-FileCopyrightText: © 2023 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "ipl3checksum"
# Version should be synced with src/ipl3checksum/__init__.py and pyproject.toml
version = "1.1.0"
edition = "2021"
description = "Library to calculate the IPL3 checksum for N64 ROMs"
repository = "https://github.com/decompollaborate/ipl3checksum"
license = "MIT"

[lib]
name = "ipl3checksum"
path = "src/rs/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
md5 = "0.7.0"
pyo3 = { version="0.20.0", features = ["extension-module"], optional = true }
thiserror = "1.0.51"

[features]
c_bindings = []
python_bindings = ["dep:pyo3"]
