# SPDX-FileCopyrightText: © 2023-2024 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "ipl3checksum"
# Version should be synced with src/ipl3checksum/__init__.py, pyproject.toml and src/rs/version.rs
version = "1.2.1"
edition = "2021"
description = "Library to calculate the IPL3 checksum for N64 ROMs"
repository = "https://github.com/decompollaborate/ipl3checksum"
license = "MIT"
rust-version = "1.60.0"

[lib]
name = "ipl3checksum"
path = "src/rs/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
md5 = "0.7.0"
pyo3 = { version="0.20.2", features = ["extension-module"], optional = true }
thiserror = "1.0.56"

[features]
c_bindings = []
python_bindings = ["dep:pyo3"]
