# SPDX-FileCopyrightText: © 2023 Decompollaborate
# SPDX-License-Identifier: MIT

[project]
name = "ipl3checksum"
version = "1.0.1"
description = "Library to calculate the IPL3 checksum for N64 ROMs"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/decompollaborate/ipl3checksum"
"Bug Tracker" = "https://github.com/decompollaborate/ipl3checksum/issues"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project.scripts]
ipl3checksum = "ipl3checksum.frontends.climain:ipl3checksumMain"

[tool.cibuildwheel]
skip = ["cp36-*"]

[tool.setuptools.package-data]
spimdisasm = ["py.typed"]
